maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:93: error: not found: value eaMurSud
  if(!eaMurSud(getX(),getY())){
      ^